# django-email-domain-checker

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
email_domain_checker/: __init__.py  admin.py  apps.py  fields.py  models.py  seed_domains.py  validators.py
email_domain_checker/migrations/: 0001_initial.py  0002_seed_domains.py
tests/: settings.py  test_models.py  test_validators.py  test_version_sync.py
