[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-email-domain-checker"
version = "0.1.0"
description = "Django package to validate email addresses against a model-backed registry of blocked domains."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bjorn" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
    "mypy",
    "django-stubs",
    "ruff",
    "tox",
    "tox-uv",
]

[tool.setuptools.packages.find]
include = ["email_domain_checker*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

